It's kinda like a game now

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Project Simulator - Simulator</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/simulator.css">
+	<title>Project Simulation Game</title>
+
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/game.css">
 </head>
 <body>
-	<div id="container" class="clearfix">
+	<div id="container" class="container">
 		<p id="loading">Loading javascript...</p>
 		
 	</div>
 
-	<script data-main="js/runner.js" src="js/vendor/require.js"></script>
+	<script data-main="js/game.js" src="js/vendor/require.js"></script>
 </body>
 </html>
